--- a/src/product_pages/cedar-ridge-rimrock-2.html
+++ b/src/product_pages/cedar-ridge-rimrock-2.html
@@ -77,6 +77,8 @@
         </p>
 
         <div class="product-detail__add">
+          <!-- Updated the link to include the product parameter -->
+           <a href="../product_pages/?product=344YJ"></a>
           <button id="addToCart" data-id="344YJ">Add to Cart</button>
         </div>
       </section>
