--- a/src/product_pages/marmot-ajax-3.html
+++ b/src/product_pages/marmot-ajax-3.html
@@ -77,6 +77,8 @@
         </p>
 
         <div class="product-detail__add">
+         <!-- Updated the link to include the product parameter -->
+          <a href="../product_pages/?product=880RR">
           <button id="addToCart" data-id="880RR">Add to Cart</button>
         </div>
       </section>
