--- a/src/product_pages/northface-talus-4.html
+++ b/src/product_pages/northface-talus-4.html
@@ -78,6 +78,8 @@
         </p>
 
         <div class="product-detail__add">
+           <!-- Updated the link to include the product parameter -->
+          <a href="../product_pages/?product=989CG">
           <button id="addToCart" data-id="989CG">Add to Cart</button>
         </div>
       </section>
