--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sleep Outside | North Face Alpine Guide 3-person tent</title>
+    <title>Sleep Outside | Cedar Ridge Rimrock 2-person tent</title>
 
     <link rel="stylesheet" href="../css/style.css" />
 
@@ -21,7 +21,7 @@
       </div>
 
       <div class="cart">
-        <a href="../cart/">
+        <a href="../cart/index.html">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
             <path
               d="M18.9 32.6c1.1 2.4 2.5 3.3 5.4 3.3 1.6 0 3.6-0.3 5.9-0.6 3.2-0.5 6.9-1 11.2-1 2.1 0 4.3 0.1 6.4 0.3 2.1 0.1 4.2 0.3 6.1 0.3 3.2 0 5.2-0.4 5.9-1.2 2.7-2.7 2.8-8.8 2.9-14.6 0.1-6.7 0.2-14.5 4.6-18.7 -0.5 0-1 0-1.6 0 -14.2 0-37.5 0-41.1 0C15.6 6.2 14.9 23.6 18.9 32.6z"
@@ -56,31 +56,28 @@
 
     <main class="divider">
       <section class="product-detail">
-        <h3>The North Face</h3>
+        <h3>Cedar Ridge</h3>
 
-        <h2 class="divider">Alpine Guide Tent - 3-Person, 4-Season</h2>
+        <h2 class="divider">Rimrock Tent - 2-Person, 3-Season</h2>
 
         <img
           class="divider"
-          src="../images/tents/the-north-face-alpine-guide-tent-3-person-4-season-in-canary-yellow-high-rise-grey~p~985pr_01~320.jpg"
-          alt="Alpine Guide Tent - 3-Person, 4-Season"
+          src="../images/tents/cedar-ridge-rimrock-tent-2-person-3-season-in-rust-clay~p~344yj_01~320.jpg"
+          alt="Rimrock Tent - 2-Person, 3-Season"
         />
 
-        <p class="product-card__price">$349.99</p>
+        <p class="product-card__price">$69.99</p>
 
-        <p class="product__color">Canary Yellow/High Rise Grey</p>
+        <p class="product__color">Rust/Clay</p>
 
         <p class="product__description">
-          Be ready for any outdoor adventure in low elevations and high-alpine
-          environments alike with the hybrid design of The North Face&#39;s
-          Alpine Guide four-season tent. It is made from durable, waterproof
-          Featherlite NSL pole system and an easy to pitch design.
+          Lightweight and ready for adventure, this Cedar Ridge Rimrock tent
+          boasts a weather-ready design that includes a tub-style floor and
+          factory-sealed rain fly
         </p>
 
         <div class="product-detail__add">
-           <!-- Updated the link to include the product parameter -->
-          <a href="../product_pages/?product=985PR">
-          <button id="addToCart" data-id="985PR">Add to Cart</button>
+          <button id="addToCart" data-id="344YJ">Add to Cart</button>
         </div>
       </section>
     </main>
