--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="../css/style.css" />
 
+    <script type="module" src="main.js"></script>
+
     <script src="../js/product.js" type="module"></script>
   </head>
 
