--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -82,6 +82,10 @@
           <button id="addToCart" data-id="344YJ">Add to Cart</button>
         </div>
       </section>
+  <section id="alert-container"></section>
+  <!-- other content -->
+</main>
+
     </main>
 
     <footer>&copy;NOT a real business</footer>
