--- a/src/product_pages/northface-talus-4.html
+++ b/src/product_pages/northface-talus-4.html
@@ -75,7 +75,8 @@
           Face&#39;s Talus four-person tent, featuring durable construction with
           a roomy interior, an advanced DAC Featherlite NSL pole system and an
           easy to pitch design.
-        </p>        <div class="product-detail__add">
+        </p>
+        <div class="product-detail__add">
           <button id="addToCart" data-id="985RF">Add to Cart</button>
         </div>
       </section>
