Fix typo in getParam function name, update product ID in HTML, and clean up Vite config formatting

--- a/src/product_pages/northface-talus-4.html
+++ b/src/product_pages/northface-talus-4.html
@@ -83,6 +83,8 @@
           <button id="addToCart" data-id="989CG">Add to Cart</button>
 =======
         </p>        <div class="product-detail__add">
+        </p>
+        <div class="product-detail__add">
           <button id="addToCart" data-id="985RF">Add to Cart</button>
         </div>
       </section>
