format and lint

--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -42,4 +42,4 @@
     <footer>&copy;NOT a real business</footer>
   </body>
 </html>
-``` 
+```
