Dynamic Footer and Header

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -92,7 +92,11 @@
         </ul>
       </section>
     </main>
+</ul>
+    </section>
+  </main>
 
-    <footer>&copy;NOT a real business</footer>
-  </body>
+  <footer>&copy;2025 ⛺ SleepOutside ⛺ WDD 330 ⛺ BYU-Idaho for BYU-Pathway Worldwide Online</footer>
+</body>
+  
 </html>
