--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sleep Outside | Product Details</title>
     <link rel="stylesheet" href="../css/style.css" />
-    <script src="../js/product.js" type="module"></script>
+    <script src="../js/index.js" type="module" ></script>
   </head>
   <body>
     <header class="divider">
