expanded product category

--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -10,6 +10,9 @@
     <header class="divider" id="main-header">
     </header>
     <main class="divider">
+      <nav class="breadcrumbs">
+        <a href="/">Home</a> &gt; <a id="categoryLink" href="">Category</a> &gt; <span id="productBreadcrumb"></span>
+      </nav>
       <section class="product-detail">
         <h3 id="productName"></h3>
         <h2 class="divider" id="productNameWithoutBrand"></h2>
@@ -26,4 +29,3 @@
     </footer>
   </body>
 </html>
-``` 
