--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,39 @@
             outside comfortably at an affordable price.
           </p>
         </div>
-      </div>      <section class="products">
+      </div>
+      
+      <section class="products">
+        <h2>Product Categories</h2>
+        <ul class="product-categories">
+          <li class="category-card">
+            <a href="/product-listing/index.html?category=tents">
+              <img src="/images/noun_Tent_2517.svg" alt="Tent Icon" />
+              <h3>Tents</h3>
+            </a>
+          </li>
+          <li class="category-card">
+            <a href="/product-listing/index.html?category=backpacks">
+              <img src="/images/noun_Backpack_65884.svg" alt="Backpack Icon" />
+              <h3>Backpacks</h3>
+            </a>
+          </li>
+          <li class="category-card">
+            <a href="/product-listing/index.html?category=sleeping-bags">
+              <img src="/images/noun_Sleeping Bag_3544775.svg" alt="Sleeping Bag Icon" />
+              <h3>Sleeping Bags</h3>
+            </a>
+          </li>
+          <li class="category-card">
+            <a href="/product-listing/index.html?category=hammocks">
+              <img src="/images/noun_Hammock_2879406.svg" alt="Hammock Icon" />
+              <h3>Hammocks</h3>
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="products">
         <h2>Top Products</h2>
         <ul class="product-list">
           <!-- Product list will be built dynamically by JavaScript -->
