--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -11,11 +11,19 @@
   </head>
   <body>
     <header class="divider" id="main-header">
-    </header>
-
-    <main class="divider">
+    </header>    <main class="divider">
       <section class="products">
         <h2>Review & Place your Order</h2>
+        
+        <div class="checkout-container">
+          <form class="checkout-form">
+            <!-- Checkout form will go here in future implementation -->
+          </form>
+          
+          <div class="order-summary">
+            <!-- Order summary will be dynamically generated -->
+          </div>
+        </div>
       </section>
     </main>
 
