--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -58,36 +58,7 @@
             outside comfortably at an affordable price.
           </p>
         </div>
-      </div>   
-      
-      <!--Category Image Section-->
-      <section class="categories">
-        <h2>Shop by Category</h2>
-        <div class="category-list">
-          <a href="product_listing/index.html?category=tents">
-            <img src="/public/images/category-tents.svg" alt="Tents" />
-            <span>Tents</span>
-          </a>
-
-          <a href="product_listing/index.html?category=tents">
-            <img src="/public/images/category-backpacks.svg" alt="Backpacks" />
-            <span>Backpacks</span>
-          </a>
-
-          <a href="product_listing/index.html?category=tents">
-            <img src="/public/images/category-sleepingbags.svg" alt="Sleeping Bags" />
-            <span>Sleeping Bags</span>
-          </a>
-
-           <a href="product_listing/index.html?category=tents">
-            <img src="/public/images/category-hammocks.svg" alt="Hammocks" />
-            <span>Hammocks</span>
-          </a>
-        </div>
-
-      </section>
-
-      <section class="products">
+      </div>      <section class="products">
         <h2>Top Products</h2>
         <ul class="product-list">
           <!-- Product list will be built dynamically by JavaScript -->
