--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -7,14 +7,25 @@
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../js/product-listing.js" type="module"></script>
   </head>
+
   <body>
     <header class="divider" id="main-header"></header>
     <main class="divider">
       <section class="products">
         <h2>Top Products</h2>
-        <ul class="product-list">
-          <!-- Product list will be built dynamically by JavaScript -->
-        </ul>
+        <div class="sort-controls">
+          <label for="sort-select">Sort by:</label>
+          <select id="sort-select">
+            <option value="default">Default</option>
+            <option value="name">Name (A-Z)</option>
+            <option value="name-desc">Name (Z-A)</option>
+            <option value="price">Price (Low to High)</option>
+            <option value="price-desc">Price (High to Low)</option>
+            <option value="brand">Brand (A-Z)</option>
+            <option value="brand-desc">Brand (Z-A)</option>
+          </select>
+        </div>
+        <ul class="product-list"></ul>
       </section>
     </main>
     <footer id="main-footer"></footer>
