Update index.html to include sorting

--- a/src/product-listing/index.html
+++ b/src/product-listing/index.html
@@ -16,6 +16,15 @@
       </nav>
       <section class="products">
         <h2 id="category-title"></h2>
+        <div class="sort-controls">
+          <label for="sort-select">Sort by:</label>
+          <select id="sort-select" aria-label="Sort products">
+            <option value="name-asc">Name (A-Z)</option>
+            <option value="name-desc">Name (Z-A)</option>
+            <option value="price-asc">Price (Low to High)</option>
+            <option value="price-desc">Price (High to Low)</option>
+          </select>
+        </div>
         <ul class="product-list">
           <!-- Product list will be built dynamically by JavaScript -->
         </ul>
