--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -16,12 +16,90 @@
         <h2>Review & Place your Order</h2>
         
         <div class="checkout-container">
-          <form class="checkout-form">
-            <!-- Checkout form will go here in future implementation -->
+          <form class="checkout-form" id="checkout-form">
+            <h3>Customer Information</h3>
+            <fieldset class="customer-info">
+              <legend>Name</legend>
+              <label for="firstName">
+                First Name*
+                <input type="text" id="firstName" name="firstName" required>
+              </label>
+              <label for="lastName">
+                Last Name*
+                <input type="text" id="lastName" name="lastName" required>
+              </label>
+            </fieldset>
+
+            <fieldset class="address-info">
+              <legend>Address</legend>
+              <label for="street">
+                Street Address*
+                <input type="text" id="street" name="street" required>
+              </label>
+              <label for="city">
+                City*
+                <input type="text" id="city" name="city" required>
+              </label>
+              <div class="state-zip-row">
+                <label for="state">
+                  State*
+                  <input type="text" id="state" name="state" required>
+                </label>
+                <label for="zip">
+                  Zip Code*
+                  <input type="text" id="zip" name="zip" pattern="[0-9]{5}(-[0-9]{4})?" required>
+                </label>
+              </div>
+            </fieldset>
+
+            <fieldset class="payment-info">
+              <legend>Payment Information</legend>
+              <label for="cardNumber">
+                Credit Card Number*
+                <input type="text" id="cardNumber" name="cardNumber" 
+                       pattern="[0-9\s]{13,19}" maxlength="19" required
+                       placeholder="1234 5678 9012 3456">
+              </label>
+              <div class="card-details-row">
+                <label for="expiration">
+                  Expiration Date*
+                  <input type="text" id="expiration" name="expiration" 
+                         pattern="(0[1-9]|1[0-2])\/[0-9]{2}" maxlength="5" required
+                         placeholder="MM/YY">
+                </label>
+                <label for="securityCode">
+                  Security Code*
+                  <input type="text" id="securityCode" name="securityCode" 
+                         pattern="[0-9]{3,4}" maxlength="4" required
+                         placeholder="123">
+                </label>
+              </div>
+            </fieldset>
+
+            <button type="submit" class="checkout-submit-btn">Complete Order</button>
           </form>
           
           <div class="order-summary">
-            <!-- Order summary will be dynamically generated -->
+            <h3>Order Summary</h3>
+            <div id="order-items"></div>
+            <div class="order-totals">
+              <div class="total-line">
+                <span>Subtotal:</span>
+                <span id="subtotal">$0.00</span>
+              </div>
+              <div class="total-line">
+                <span>Shipping:</span>
+                <span id="shipping">$0.00</span>
+              </div>
+              <div class="total-line">
+                <span>Tax:</span>
+                <span id="tax">$0.00</span>
+              </div>
+              <div class="total-line order-total">
+                <span><strong>Order Total:</strong></span>
+                <span id="orderTotal"><strong>$0.00</strong></span>
+              </div>
+            </div>
           </div>
         </div>
       </section>
