--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -30,31 +30,32 @@
             </fieldset>
 
             <fieldset class="address-info">
-              <legend>Address</legend>
-              <label for="street">
+              <legend>Address</legend>              <label for="street">
                 Street Address*
-                <input type="text" id="street" name="street" required value="123 Main">
+                <input type="text" id="street" name="street" required minlength="5" value="123 Main">
               </label>
               <label for="city">
                 City*
-                <input type="text" id="city" name="city" required value="Rexburg">
+                <input type="text" id="city" name="city" required minlength="2" value="Rexburg">
               </label>
               <div class="state-zip-row">
                 <label for="state">
                   State*
-                  <input type="text" id="state" name="state" required value="ID">
+                  <input type="text" id="state" name="state" required minlength="2" maxlength="2" 
+                         pattern="[A-Za-z]{2}" value="ID">
                 </label>
                 <label for="zip">
                   Zip Code*
-                  <input type="text" id="zip" name="zip" pattern="[0-9]{5}(-[0-9]{4})?" required value="83440">
+                  <input type="text" id="zip" name="zip" pattern="[0-9]{5}(-[0-9]{4})?" required 
+                         title="Please enter a valid 5-digit ZIP code" value="83440">
                 </label>
               </div>
             </fieldset><fieldset class="payment-info">
-              <legend>Payment Information</legend>
-              <label for="cardNumber">
+              <legend>Payment Information</legend>              <label for="cardNumber">
                 Credit Card Number*
                 <input type="text" id="cardNumber" name="cardNumber" 
                        pattern="[0-9\s]{13,19}" maxlength="19" required
+                       title="Please enter a valid credit card number"
                        placeholder="1234 5678 9012 3456" value="1234123412341234">
               </label>
               <div class="card-details-row">
@@ -62,12 +63,14 @@
                   Expiration Date*
                   <input type="text" id="expiration" name="expiration" 
                          pattern="(0[1-9]|1[0-2])\/[0-9]{2}" maxlength="5" required
+                         title="Please enter expiration date in MM/YY format"
                          placeholder="MM/YY" value="12/25">
                 </label>
                 <label for="securityCode">
                   Security Code*
                   <input type="text" id="securityCode" name="securityCode" 
                          pattern="[0-9]{3,4}" maxlength="4" required
+                         title="Please enter 3-4 digit security code"
                          placeholder="123" value="123">
                 </label>
               </div>
