--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -25,7 +25,12 @@
             <option value="brand-desc">Brand (Z-A)</option>
           </select>
         </div>
+        
         <ul class="product-list"></ul>
+        <div class="checkout">
+          <a href="../checkout/index.html"
+          class="checkout-button">Proceed to Checkout</a>
+        </div>
       </section>
     </main>
     <footer id="main-footer"></footer>
